# MarketPredictor

./: pyproject.toml  take_home_assignment.md  take_home_assignment.py
