[tool.poetry]
name = "marketpredictor"
version = "0.1.0"
description = ""
authors = ["beckynevin <beckynevin@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
pandas = "^2.2.3"
plotly = "^5.24.1"
scikit-learn = "^1.5.2"
matplotlib = "^3.9.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
